
[tool.poetry]
name = "eeg-data-analysis"
version = "0.1.0"
description = "A project for analyzing EEG data with MNE and supporting libraries"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
scipy = "^1.7"
pandas = "^1.3"
mne = "^1.4"
matplotlib = "^3.5"
seaborn = "^0.11"
scikit-learn = "^1.0"
statsmodels = "^0.13"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
ipython = "^7.29"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"